술도감재수집데이터 DB업로드 및 이미지 다운

--- a/mysql_CSV_insert.ipynb
+++ b/mysql_CSV_insert.ipynb
@@ -1941,7 +1941,7 @@
     "import pymysql \n",
     "\n",
     "# MySQL Connection 연결\n",
-    "conn = pymysql.connect(host='yh-db.cdbf2m2icqmv.ap-northeast-2.rds.amazonaws.com', user='jieun_db_user', password='je1234db', db='jieun_db', charset='utf8')\n",
+    "conn = pymysql.connect(host=Config.HOST, user=Config.DB_USER, password=Config.DB_PASSWORD, db=Config.DATABASE, charset='utf8')\n",
     "\n",
     "# Connection 으로부터 Cursor 생성\n",
     "curs = conn.cursor()\n",
@@ -2312,7 +2312,7 @@
    ],
    "source": [
     "# jieun_db의 recipe테이블을 조회합니다\n",
-    "conn = pymysql.connect(host='yh-db.cdbf2m2icqmv.ap-northeast-2.rds.amazonaws.com', user='jieun_db_user', password='je1234db', db='jieun_db', charset='utf8')\n",
+    "conn = pymysql.connect(host=Config.HOST, user=Config.DB_USER, password=Config.DB_PASSWORD, db=Config.DATABASE, charset='utf8')\n",
     "\n",
     "# Connection 으로부터 Cursor 생성\n",
     "curs = conn.cursor()\n",
@@ -3025,7 +3025,7 @@
    "outputs": [],
    "source": [
     "# jieun_db의 recipe테이블을 조회합니다\n",
-    "conn = pymysql.connect(host='yh-db.cdbf2m2icqmv.ap-northeast-2.rds.amazonaws.com', user='jieun_db_user', password='je1234db', db='jieun_db', charset='utf8')\n",
+    "conn = pymysql.connect(host=Config.HOST, user=Config.DB_USER, password=Config.DB_PASSWORD, db=Config.DATABASE, charset='utf8')\n",
     "\n",
     "# Connection 으로부터 Cursor 생성\n",
     "curs = conn.cursor()\n",
