--- a/mysql_csv_insert3.ipynb
+++ b/mysql_csv_insert3.ipynb
@@ -1039,7 +1039,7 @@
     "import pymysql \n",
     "\n",
     "# MySQL Connection 연결\n",
-    "conn = pymysql.connect(host='yh-db.cdbf2m2icqmv.ap-northeast-2.rds.amazonaws.com', user='jieun_db_user', password='je1234db', db='jieun_db', charset='utf8')\n",
+    "conn = pymysql.connect(host=Config.HOST, user=Config.DB_USER, password=Config.DB_PASSWORD, db=Config.DATABASE, charset='utf8')\n",
     "\n",
     "# Connection 으로부터 Cursor 생성\n",
     "curs = conn.cursor()\n",
